# pipeworkmc-vanilla-datagen

./: Cargo.toml  README.md
output/: .gitignore
src/: download_server_files.rs  main.rs  run_datagen.rs
src/generate/: mod.rs  packets.rs  static_registries.rs  vanilla_datapack.rs
