[package]
name = "pipeworkmc-vanilla-datagen"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused_parens = "allow"


[dependencies.pipeworkmc-data]
path             = "../pipeworkmc-data"
default-features = false


[dependencies.serde]
version = "1.0"
[dependencies.serde_json]
version = "1.0"

[dependencies.smol]
version = "2.0"

[dependencies.surf]
version = "2.3"

[dependencies.convert_case]
version = "0.8"
